# Intel-Ilab

./: .gitignore
Cache2Q/: CMakeLists.txt  Readme.md
Cache2Q/include/: cache.hpp  perfect_cache.hpp
Cache2Q/src/: main.cpp  perfect_cache.cpp
Cache2Q/tests/: mytest  mytest.txt  test  test1.cpp  tests  tests.cpp  utest1.txt  utest2.txt  utest3.txt  utest4.txt  utest5.txt  utest6.txt  utest7.txt  utest8.txt  utest9.txt
Triangles/: main.cpp
Triangles/include/: triangles.hpp
Triangles/src/: main.cpp
Triangles/tests/: catch2_tests.cpp  gtests.cpp  tests.cpp
